refactor event block

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Eventos DOM</title>
   </head>
   <body>
-    <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()" class="box">
+    <div id="area" class="box">
       <p>Interaja...</p>
     </div>
     <script src="./script.js"></script>
