--- a/condicoes-js/nasc.html
+++ b/condicoes-js/nasc.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nacionalidade</title>
-  </head>
-  <body>
+</head>
+<body>
     <h1>Qual a sua Nacionalidade?</h1>
-    <input type="text" id="nasc">
-    <input type="button" onclick="verificar()" value="Analisar">
-    <div id="res"></div>
+    <input type="text" placeholder="Digite seu país" id="pais">
+    <button onclick="analisar()">Verificar</button>
+    <div id="usuario"></div>
 
     <script>
-      /*
-      function analisar() {
-        var pais= document.querySelector('input#nasc')
-        var resul = document.querySelector('div#res')
-        var lugar = (nasc.value)
-        res.innerHTML = `Voce é de ${resul}`
-      }
-      */
+        function analisar() {
+            var usuario = document.querySelector('div#usuario')
+
+            var inputPais = document.querySelector('input#pais')
+            var valueInputPais = inputPais.value
+            var lowercaseValueInputPais = valueInputPais.toLowerCase()
+
+            usuario.innerHTML = `<p>Você é de ${valueInputPais}</p>`
+
+           if (lowercaseValueInputPais == "brasil") {
+               usuario.innerHTML += `<p>Portanto você é <strong>Brasileiro!</strong></p>`
+           } else {
+               usuario.innerHTML += `<p>Entretanto você é <strong>Estrangeiro!</strong><p>`
+           }
+        }
     </script>
-  </body>
+</body>
 </html>
