--- a/menu/index.html
+++ b/menu/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
-    <title>Menu</title>
+    <link href="./reset.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
+    <link href="./hamburgers.css" rel="stylesheet">
+    <title>Menu Hamburguers</title>
   </head>
   <body>
     <header>
-      <a href="#" class="button-reverse">Log in</a>
-      <a href="#" class="button">Sign up</a>
-      <button class="menu" onclick="toggleMenu()">|||</button>
+      <div class="box">
+        <a href="#" class="button-reverse">Log in</a>
+        <a href="#" class="button">Sign up</a>
+        <button class="hamburger hamburger--vortex" onclick="toggleMenu()">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
+      </div>
     </header>
-
     <nav>
       <ul class="list">
         <a href="#" class="list-item"><li>For Members</li></a>
@@ -23,7 +29,6 @@
         <a href="#" class="list-item"><li>About Us</li></a>
       </ul>
     </nav>
-
     <script src="./script.js"></script>
   </body>
 </html>
