--- a/contagem-de-click/index.html
+++ b/contagem-de-click/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contagem de click</title>
+    <title>Contador de click</title>
 </head>
 <body>
     <h1>Contador de cliques</h1>
-    <button>Clique em mim</button>
-    <button>Zerar o contador</button>
+    <button onclick="contar()">Clique em mim</button>
+    <button onclick="zerar()">Zerar o contador</button>
+    <p class="resultado"></p>
+    <script src="./script.js"></script>
 </body>
 </html>
