add validation conditions

--- a/laços/soma-lacos/index.html
+++ b/laços/soma-lacos/index.html
@@ -20,7 +20,7 @@
         <input type="number" class="passo"></input>
       </label>
       <button onclick="contar()">Contar</button>
-      <p class="resultado"></p>
+      <p class="resultado">Preparando a contagem...</p>
     </div>
     <script src="./script.js"></script>
   </body>
