--- a/laços/tabuada-for-while/index.html
+++ b/laços/tabuada-for-while/index.html
@@ -12,7 +12,7 @@
     <label>Número:</label>
     <input type="number" placeholder="Digite um número" class="entrada"></input>
     <button onclick="calcular()">Calcular</button>
-    <p class="resposta">Preencha os dados acima e aperte o botão.</p>
+    <div class="resposta">Preencha os dados acima e aperte o botão.</div>
     <script src="./script.js"></script>
   </body>
 </html>
