feat new features

--- a/array/list-array/index.html
+++ b/array/list-array/index.html
@@ -7,6 +7,11 @@
     <title>Lista</title>
   </head>
   <body>
+    <form>
+      <input class="input" type="text">
+      <button type="submit">add</button>
+      <button type="button" onclick="removeItems()">remove items</button>
+    </form>
     <ul class="lista"></ul>
     <script src="./script.js"></script>
   </body>
