feat: add list to object

--- a/objects/input-object-array/index.html
+++ b/objects/input-object-array/index.html
@@ -12,8 +12,8 @@
     <input type="text" class="nome"></input><br></br>
     <label>NOTAS:</label>
     <input type="number" class="nota"></input><br></br>
-    <button type="submit" onclick="add()">Adicionar</button>
-    <div class="resultado"></div>
+    <button type="submit" onclick="handleSubmit()">Adicionar</button>
+    <ul class="lista"></ul>
     <script src="./script.js"></script>
   </body>
 </html>
