refactor: correct semantics of onclick function

--- a/array/list-array/index.html
+++ b/array/list-array/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <form>
-      <input class="input" type="text">
-      <button type="submit">add</button>
-      <button type="button" onclick="removeItems()">remove items</button>
+      <input type="text" class="input">
+      <button type="submit" class="buttonAdd">add</button>
+      <button type="button" class="buttonRemove">remove items</button>
     </form>
     <ul class="lista"></ul>
     <script src="./script.js"></script>
